One to one mapping user and user profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.h2.console.enabled=true
 
 #spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:postgresql://localhost:5432/marche
+spring.datasource.url=jdbc:postgresql://localhost:5432/practical
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -11,6 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
 app.security.jwtSecret= JWTSuperSecretKey
