--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.h2.console.enabled=true
+spring.data.mongodb.uri=mongodb://localhost:27017/assistodb
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.url=jdbc:postgresql://localhost:5432/practical
