--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
+spring.data.arangodb.database=beorgdb
+spring.data.arangodb.user=root
+spring.data.arangodb.password=123456
+spring.data.arangodb.hosts=127.0.0.1:8529
 
 app.security.jwtSecret= JWTSuperSecretKey
 app.security.jwtExpirationInMs = 604800000
